# t-indicators

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
config/: local.toml  prod.toml
src/: main.rs
src/api/: health_api.rs  health_db.rs  mod.rs
src/app_state/: models.rs
src/db/clickhouse/: clickhouse_service.rs  connection.rs  mod.rs
src/db/clickhouse/models/: indicator.rs  mod.rs
src/db/clickhouse/repository/: indicator_repository.rs  mod.rs
src/db/postgres/: connection.rs  mod.rs  postgres_service.rs
src/db/postgres/models/: indicator_status.rs  mod.rs  tinkoff_candles_status.rs
src/db/postgres/repository/: health_check_repository.rs  indicator_status_repository.rs  mod.rs  tinkoff_candles_status_repository.rs
src/env_config/: build_config.rs  build_env.rs  mod.rs
src/env_config/models/: app_config.rs  app_env.rs  app_setting.rs  mod.rs
src/layers/: layer.rs  mod.rs
src/logger/: config.rs
src/services/: mod.rs
src/services/indicators/: calculator.rs  mod.rs  scheduler.rs
src/utils/: mod.rs
